--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,10 +1,2 @@
-<div class="container mt-5">
-  <h1>Edit task</h1>
-
-  <%= render "form", task: @task %>
-
-  <hr>
-  <%= link_to tasks_path do %>
-    <i class="fa-solid fa-arrow-rotate-left"></i> Back to list
-  <% end %>
-</div>
+<% "edit a task" %>
+<%= render "form", task: @task %>
