--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,24 +1,25 @@
-<h1>My tasks</h1>
+<div class="container mt-5">
+  <h1>My tasks</h1>
 
-<ul id="tasks">
-  <% @tasks.each do |task| %>
-    <li>
-      <% if task.completed %>
-        <i class="fa fa-check-square-o"></i>
-      <% else %>
-        <i class="fa fa-square-o"></i>
-      <% end %>
-      <%= link_to task.title, task_path(task.id) %>
-      ·
-      <%= link_to task_path(task.id), method: :delete, data: { confirm: "Delete #{task.title}?" } do %>
-        <i class="fa fa-trash-o" aria-hidden="true"></i>
-      <% end %>
-    </li>
+  <ul id="tasks">
+    <% @tasks.each do |task| %>
+      <li>
+        <% if task.completed? %>
+          <i class="fa-regular fa-square-check"></i>
+        <% else %>
+          <i class="fa-regular fa-square"></i>
+        <% end %>
+        <%= link_to task.title, task_path(task.id) %>
+        <%= link_to task_path(task.id), data: {turbo_method: :delete, turbo_confirm: "Delete #{task.title}?"} do %>
+          <i class="fa-regular fa-trash-can"></i>
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
+
+  <hr>
+
+  <%= link_to new_task_path do %>
+    <i class="fa-solid fa-plus"></i> Add a new task
   <% end %>
-</ul>
-
-<hr>
-
-<%= link_to new_task_path do %>
-  <i class="fa fa-plus"></i> Add a new task
-<% end %>
+</div>
